--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1",
     "react-bootstrap": "^1.5.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "swr": "^0.4.2",
     "typescript": "^4.2.3"
   }
