--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@tailwindcss/forms": "^0.2.1",
     "next": "^10.0.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
+    "autoprefixer": "^10.2.5",
     "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
     "eslint": "^7.21.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
@@ -28,11 +31,13 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "postcss": "^8.2.8",
     "prettier": "^2.2.1",
-    "react-bootstrap": "^1.5.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "swr": "^0.4.2",
+    "tailwindcss": "^2.0.4",
+    "tailwindcss-textshadow": "^2.1.3",
     "typescript": "^4.2.3"
   }
 }
