--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@tailwindcss/forms": "^0.2.1",
+    "formik": "^2.2.6",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
