--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "prod": "next build && next start --port 3000",
     "start": "next start"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@tailwindcss/forms": "^0.2.1",
+    "clsx": "^1.1.1",
     "formik": "^2.2.6",
     "next": "^10.0.0",
     "react": "17.0.1",
