--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "swr": "^0.4.2",
     "tailwindcss": "^2.0.4",
     "tailwindcss-textshadow": "^2.1.3",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "vercel": "^21.3.3"
   }
 }
