fix: :bug: Corrige uso de envs
Signed-off-by: Hugo Branco <hugo.barbosa@justa.com.vc>

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # Created by Vercel CLI
-TITLE="Queridômetro"
-PASSPHRASE="123456"
+NEXT_PUBLIC_TITLE=Queridômetro
+NEXT_PUBLIC_FIREBASE_URL=https://queridometro-justa-default-rtdb.firebaseio.com
+NEXT_PUBLIC_PASSPHRASE=123456
