dev: :robot: Altera envs
Signed-off-by: Hugo Branco <hugo.barbosa@justa.com.vc>

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # Created by Vercel CLI
 NEXT_PUBLIC_TITLE=Queridômetro
-NEXT_PUBLIC_FIREBASE_URL=https://queridometro-justa-default-rtdb.firebaseio.com
-NEXT_PUBLIC_PASSPHRASE=123456
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
+FIREBASE_URL=http://localhost:4000
+PASSPHRASE=123456
