chore: :sparkles: Adiciona SWR para requisições GET
Signed-off-by: Hugo Branco <hugo.barbosa@justa.com.vc>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,10 @@
     "baseUrl": ".",
     "paths": {
       "@api": ["pages/api/*"],
-      "@components": ["components/*"],
+      "@components": ["components/index.tsx"],
       "@dummy-system": ["dummy-system/index.tsx"],
       "@models": ["models/index.tsx"],
-      "@services": ["services/*"],
+      "@services": ["services/index.tsx"],
       "@utils": ["utils/index.tsx"]
     }
   },
